--- a/com.cbcx.dynamicJarLoader/.classpath
+++ b/com.cbcx.dynamicJarLoader/.classpath
@@ -2,8 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="plugins/serviceProvider.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.novak.watchservice"/>
-	<classpathentry kind="lib" path="plugins/serviceProvider2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.cbcx.service"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
